--- a/README.adoc
+++ b/README.adoc
@@ -1,6 +1,7 @@
 = Compiler et construire ses applications avec maven
 Jean-Michel Bruel <jbruel@gmail.com>
-v1, 2022-02-20 : Initial draft
+v22.1, 2022-09-04 : BUT 2 version
+//v1, 2022-02-20 : Initial draft
 :icons: font
 :diagrams: .
 :experimental:
@@ -24,9 +25,6 @@ ifdef::env-github[]
 :icongit: Git
 endif::[]
 
-// Tags
-image:https://classroom.github.com/assets/open-in-vscode-f059dc9a6f8d3a56e377f745f24479a46679e63a5d9fe6f495e02850cd0d8118.svg["Open in Visual Studio Code",link="https://classroom.github.com/online_ide?assignment_repo_id=7083920&assignment_repo_type=AssignmentRepo"]
-
 //---------------------------------------------------------------
 
 Ce TP vise à être capable de compiler un fichier Java sans être dépendant de son IDE favori.
@@ -46,7 +44,7 @@ Le plus simple pour réaliser ce TP est d'utiliser gitpod : rajoutez `gitpod.io/
 ====
 Pour ceux qui veulent lancer les commandes {maven} sur leur machine :
 
-. Placez vous dans le répertoire cloné (par exemple `r2-03-td4-maven-Falettiattendre`)
+. Placez vous dans le répertoire cloné (par exemple `r3-04-td1-maven-Dupont`)
 . Ouvrez une invite de commande Windows (CMD) dans ce répertoire
 . Tapez la commande :
 +
@@ -131,7 +129,3 @@ image::success2.png["Ca run!", width=80%]
 
 Pour ce TP, il vous faudra simplement rendre le projet complet (`src`) ainsi que la dernière version du fichier `pom.xml` sur votre dépôt et la javadoc de votre code.
 
-[appendix]
-== Import dans Eclipse
-
-TO BE DONE...
