--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,4 @@
-= Compiler et construire ses applications avec maven
+= test pour savoir je ne sait quoi
 Jean-Michel Bruel <jbruel@gmail.com>
 v22.1, 2022-09-04 : BUT 2 version
 //v1, 2022-02-20 : Initial draft
